# Attributes

./: CMakeLists.txt  Generate.sh  Kconfig  Kconfig.attribute  README.md  attribute_generator.py  attributes.json  make_snake.py  requirements.txt  sentrius_methods.json
attributes/: attributes_methods.yml
framework/: attr_ids.h  attr_msgcodes.h
generator/: api.py  attribute_generator.py  enum_replace.csv  requirements.txt
generator/template/: attr_custom_validator.h  attr_table.c  attr_table.h  attr_util.h
include/: attr.h  attr_defs.h  attr_hash.h  attr_validator.h  attribute_mgmt.h
input/: attributes.cddl
scripts/: attribute_generator.py  make_snake.py  remove_projects.py  remove_quotes.py  renumber.py  requirements.txt
source/: attr.c  attr_shell.c  attr_validator.c
src/: attr.c  attr_shell.c  attr_validator.c  attribute_mgmt.c
template/: attributes.json  legacy.attributes.json
template/include/: attr_table.h  attr_util.h
template/source/: attr_table.c
tests/: attributes.json
tests/display_options/: CMakeLists.txt  (+3 more)
tests/lock/: CMakeLists.txt  prj.conf  testcase.yaml
tests/lock/attributes/include/: attr_table.h
tests/lock/attributes/source/: attr_custom_validator.c  attr_table.c
tests/lock/boards/: bt510.overlay
tests/lock/include/: dummy_smp.h  test_lock.h
tests/lock/include/cbor/: cbor_common.h
tests/lock/include/cddl/: decode_lock.h  encode_lock.h  lock_types.h
tests/lock/src/: dummy_smp.c  main.c  test_lock.c
tests/lock/src/cddl/: decode_lock.c  encode_lock.c
zcbor/: attributes.cddl  zcbor_get.txt
zephyr/: module.yml
(+28 files in other folders)
